[package]
name = "ocpp-cs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ocpp-json = { path = "../ocpp-json" }
ocpp-rpc = { path = "../ocpp-rpc" }
url = "2.2"
log = "0.4"
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
env_logger = "0.9"
tokio-tungstenite = { version = "0.17", features = ["native-tls"] }
rust-ocpp = "0.2.0"
serde_json = "1"
uuid = { version = "1", features = ["v4", "fast-rng", "macro-diagnostics"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
chrono = "0.4"
rand = "0.8.5"
clap = { version = "3.2.20", features = ["derive"] }
