[package]
name = "ocpp-json"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4.19", default-features = false, features = [
    "serde",
    "clock",
] }
rand = "0.8"
uuid = { version = "1.0.0", features = ["v4"] }
pretty_env_logger = "0.4.0"
log = "0.4"
validator = { version = "0.14", features = ["derive"] }
regex = "1"
