[package]
name = "ocpp-rpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ocpp-json = { path = "../ocpp-json" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = "0.24.0"
strum_macros = "0.24.0"
queues = "1.0.2"
once_cell = "1.10.0"
